# Copaiba-NEO

./: Cargo.toml  README.md  build.rs  build.yml  changelog.md  index.html  readme.md  recursos_br.md
.github/workflows/: build.yml
src/: audio.rs  lib.rs  main.rs  oto.rs  spectrogram.rs  waveform.rs  wsola.rs
src/app/: audio_ops.rs  auto_oto.rs  bidi.rs  file_ops.rs  mod.rs  plugin_ops.rs  recorder.rs  selection.rs  state.rs  ui_header.rs  ui_home.rs  ui_menu.rs  ui_modals.rs  ui_recorder.rs  ui_status.rs  ui_table.rs  ui_tabs.rs  ui_tools.rs  ui_waveform.rs  updater.rs
src/assets/: ar-SA.egl  en-US.egl  pt-BR.egl
